## find first position of target
add_executable(FindFirstPositionOfTarget FindFirstPositionOfTarget.cpp)

## find last position of target
add_executable(FindLastPositionOfTarget FindLastPositionOfTarget.cpp)

## find k closest elements
add_executable(FindKClosestElements FindKClosestElements.cpp)

add_executable(FindMinimumInRotatedArray FindMinimumInRotatedArray.cpp)

add_executable(FastPower FastPower.cpp)
