
## find first position of target
add_executable(ValidPalindrome ValidPalindrome.cpp)

add_executable(ValivPalindromeV2 ValidPalindromeV2.cpp)

add_executable(TwoSumUniquePairs TwoSumUniquePairs.cpp)

#add_executable(ThreeSum ThreeSum.cpp)

add_executable(TwoSumClosest TwoSumClosest.cpp)

add_library(twopointer
        ThreeSum.cpp)
